--- a/workshop/exercise-06/index.html
+++ b/workshop/exercise-06/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <link href="style.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="nav">
-        <span class="nav-dropdown">
-            Dropdown
-        </span>
+      <span class="nav-dropdown">
+        Dropdown
+        <div class="dropdown-menu">
+          <ul class="menu-list">
+            <li>Amazing</li>
+            <li>Dropdown</li>
+            <li>Item3</li>
+          </ul>
+        </div>
+      </span>
     </div>
-</body>
-
+  </body>
 </html>
