--- a/workshop/exercise-10/index.html
+++ b/workshop/exercise-10/index.html
@@ -7,7 +7,7 @@
     <div class="main">
       <div>
         <h1 class="fast">Helloooooo</h1>
-        <button class="cool">Cool button</button>
+        <button class="cool">Cool Button</button>
       </div>
     </div>
   </body>
